--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@ function startApp() {
 </code>
     </pre>
   </section>
+
+  <section>
+    <h2>PDF: ExampleManifest</h2>
+    <p>
+      <a href="ExampleManifest.pdf" target="_blank">View ExampleManifest PDF</a>
+    </p>
+    <h3>Preview:</h3>
+    <embed src="ExampleManifest.pdf" type="application/pdf" width="600" height="400">
+    <!-- If you prefer iframe, you can use the line below instead -->
+    <!-- <iframe src="ExampleManifest.pdf" width="600" height="400"></iframe> -->
+  </section>
   <!-- Add more projects below using the same format -->
 </body>
 </html>
