--- a/index.html
+++ b/index.html
@@ -28,15 +28,12 @@ function startApp() {
   </section>
 
   <section>
-    <h2>PDF: ExampleManifest</h2>
+    <h2>Embedded PDF: ExampleManifest</h2>
+    <embed src="ExampleManifest.pdf" type="application/pdf" width="100%" height="600px">
+    <!-- If you want a fallback link for browsers that don't support embedding: -->
     <p>
-      <a href="ExampleManifest.pdf" target="_blank">View ExampleManifest PDF</a>
+      <a href="ExampleManifest.pdf" target="_blank">Download/View ExampleManifest.pdf</a>
     </p>
-    <h3>Preview:</h3>
-    <embed src="ExampleManifest.pdf" type="application/pdf" width="600" height="400">
-    <!-- If you prefer iframe, you can use the line below instead -->
-    <!-- <iframe src="ExampleManifest.pdf" width="600" height="400"></iframe> -->
   </section>
-  <!-- Add more projects below using the same format -->
 </body>
 </html>
