--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@ function startApp() {
   </section>
 
   <section>
-    <h2>Embedded PDF: ExampleManifest</h2>
-    <embed src="ExampleManifest.pdf" type="application/pdf" width="100%" height="600px">
+    <h2>Embedded PDF: HD4 TLO Manifest - DD612 - 25-08-25.pdf</h2>
+    <embed src="HD4 TLO Manifest - DD612 - 25-08-25.pdf" type="application/pdf" width="100%" height="600px">
     <!-- If you want a fallback link for browsers that don't support embedding: -->
     <p>
-      <a href="ExampleManifest.pdf" target="_blank">Download/View ExampleManifest.pdf</a>
+      <a href="HD4 TLO Manifest - DD612 - 25-08-25.pdf" target="_blank">Download/View HD4 TLO Manifest - DD612 - 25-08-25.pdf</a>
     </p>
   </section>
 </body>
