--- a/index.html
+++ b/index.html
@@ -13,16 +13,9 @@
 <body>
   <h1>Josh Kirkham Portfolio</h1>
   <section>
-    <h2>Project: Cool App</h2>
-    <p>This is a brief description of my project. <br>
-       <a href="https://github.com/joshkirkham1/cool-app" target="_blank">See full code</a>
+    <h2>Project: TLO Manifest HD4</h2>
     </p>
     <pre>
-<code>
-// Example snippet from project (not full source)
-function startApp() {
-  console.log('App started!');
-}
 </code>
     </pre>
   </section>
