--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <h1>Josh Kirkham Portfolio</h1>
+  <h1>PDF Plot Generation from TLO Manifest</h1>
   <section>
     <h2>Project: TLO Manifest HD4</h2>
     </p>
@@ -21,7 +21,7 @@
   </section>
 
   <section>
-    <h2>Embedded PDF: HD4 TLO Manifest - DD612 - 25-08-25.pdf</h2>
+    <h2>Example PDF</h2>
     <embed src="HD4 TLO Manifest - DD612 - 25-08-25.pdf" type="application/pdf" width="100%" height="600px">
     <!-- If you want a fallback link for browsers that don't support embedding: -->
     <p>
