--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
   <h1>PDF Plot Generation from TLO Manifest</h1>
   <section>
-    <h2>Project: TLO Manifest HD4</h2>
-    </p>
+    <p>For TLO Loading data from every wagon is already collected. However, this data is rarely used and never visualised. </p>
     <pre>
 </code>
     </pre>
@@ -25,7 +24,6 @@
     <embed src="HD4 TLO Manifest - DD612 - 25-08-25.pdf" type="application/pdf" width="100%" height="600px">
     <!-- If you want a fallback link for browsers that don't support embedding: -->
     <p>
-      <a href="HD4 TLO Manifest - DD612 - 25-08-25.pdf" target="_blank">Download/View HD4 TLO Manifest - DD612 - 25-08-25.pdf</a>
     </p>
   </section>
 </body>
