--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
   <meta charset="UTF-8">
   <title>Josh Kirkham Portfolio</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 40px; background: #f9f9f9; }
-    h1 { color: #222; }
-    section { margin-bottom: 32px; }
-    pre { background: #eee; padding: 12px; }
   </style>
 </head>
 <body>
@@ -18,6 +14,14 @@
 </code>
     </pre>
   </section>
+      <h2>Creation from PlantSCADA</h2>
+      <p>After a train is completed a cicode function is triggered. This creates a .txt file with every wagons loading data. </p>
+      <embed src="SCADAEvent.png" type="application/png" width="100%" height="600px">
+
+  </section>
+      <h2>Files needed for processing and emailing</h2>
+      <p>After the cicode creates the input txt file the executable is called. This processes the input file and outputs the pdf plots. Next batch file for emailing the pdf manifest to recipients is triggered. </p>
+      <embed src="Allfiles.png" type="application/png" width="100%" height="600px">
 
   <section>
     <h2>Example PDF</h2>
