--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   </section>
       <h2>Creation from PlantSCADA</h2>
       <p>After a train is completed a cicode function is triggered. This creates a .txt file with every wagons loading data. </p>
-      <embed src="SCADAEvent.png" type="application/png" width="100%" height="600px">
+      <img src="SCADAEvent.png" alt="My portfolio screenshot" width="400">
 
   </section>
       <h2>Files needed for processing and emailing</h2>
-      <p>After the cicode creates the input txt file the executable is called. This processes the input file and outputs the pdf plots. Next batch file for emailing the pdf manifest to recipients is triggered. </p>
-      <embed src="Allfiles.png" type="application/png" width="100%" height="600px">
+      <p>After the cicode creates the input txt file the executable is called. This processes the input file and outputs the pdf plots. Next, a batch file for emailing the pdf manifest to recipients is triggered. </p>
+      <img src="Allfiles.png" alt="My portfolio screenshot" width="400">
 
   <section>
     <h2>Example PDF</h2>
