--- a/index.html
+++ b/index.html
@@ -3,34 +3,111 @@
 <head>
   <meta charset="UTF-8">
   <title>Josh Kirkham Portfolio</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
   <style>
+    body {
+      font-family: 'Roboto', Arial, sans-serif;
+      background: #f4f6fa;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+    .container {
+      max-width: 900px;
+      margin: 40px auto;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 2px 16px rgba(0,0,0,0.07);
+      padding: 40px 32px;
+    }
+    h1 {
+      color: #2979ff;
+      letter-spacing: 1px;
+      text-align: center;
+      margin-bottom: 32px;
+    }
+    h2 {
+      color: #1565c0;
+      margin-top: 32px;
+    }
+    h3 {
+      color: #424242;
+      margin-top: 26px;
+      margin-bottom: 10px;
+    }
+    p {
+      line-height: 1.6;
+      margin-bottom: 18px;
+    }
+    section {
+      margin-bottom: 38px;
+    }
+    img {
+      display: block;
+      max-width: 100%;
+      height: auto;
+      margin: 16px 0;
+      border-radius: 8px;
+      box-shadow: 0 1px 8px rgba(0,0,0,0.08);
+    }
+    .pdf-preview {
+      width: 100%;
+      height: 800px;
+      border: 1px solid #e0e0e0;
+      border-radius: 8px;
+      margin-top: 16px;
+      box-shadow: 0 1px 8px rgba(0,0,0,0.08);
+    }
+    .footer {
+      text-align: center;
+      color: #888;
+      margin-top: 32px;
+      font-size: 0.9em;
+    }
   </style>
 </head>
 <body>
-  <h1>PDF Plot Generation from TLO Manifest</h1>
-  <section>
-    <h2>Problem:</h2>
-    <p>For TLO Loading data from every wagon is already collected. However, this data is rarely used and never visualised. </p>
+  <div class="container">
+    <h1>PDF Plot Generation from TLO Manifest</h1>
     
     <section>
-      <h2>Solution:</h2>
-      <p>Leverage existing scripting in PlantSCADA and integrate a python script to auto-generate a PDF with plots of relevant train loading data. Have this emailed out to stakeholders after the cmpletion of every train  </p>
-  </section>
-      <h3>Creation from PlantSCADA</h2>
-      <p>After a train is completed a cicode function is triggered. This creates a .txt file with every wagons loading data. </p>
-      <img src="SCADAEvent.png" alt="My portfolio screenshot" width="800">
+      <h2>Problem</h2>
+      <p>
+        TLO Loading data from every wagon is already collected. However, this data is rarely used and never visualised.
+      </p>
+    </section>
 
-  </section>
-      <h3>Files needed for processing and emailing</h2>
-      <p>After the cicode creates the input txt file the executable is called. This processes the input file and outputs the pdf plots. Next, a batch file for emailing the pdf manifest to recipients is triggered. </p>
-      <img src="Allfiles.png" alt="My portfolio screenshot" width="800">
+    <section>
+      <h2>Solution</h2>
+      <p>
+        Leverage existing scripting in PlantSCADA and integrate a Python script to auto-generate a PDF with plots of relevant train loading data. Have this emailed out to stakeholders after the completion of every train.
+      </p>
+    </section>
 
-  <section>
-    <h3>Example PDF</h2>
-    <embed src="HD4 TLO Manifest - DD612 - 25-08-25.pdf" type="application/pdf" width="100%" height="2000px">
-    <!-- If you want a fallback link for browsers that don't support embedding: -->
-    <p>
-    </p>
-  </section>
+    <section>
+      <h3>Creation from PlantSCADA</h3>
+      <p>
+        After a train is completed, a cicode function is triggered. This creates a .txt file with every wagon's loading data.
+      </p>
+      <img src="SCADAEvent.png" alt="SCADA event screenshot">
+    </section>
+
+    <section>
+      <h3>Files Needed for Processing and Emailing</h3>
+      <p>
+        After the cicode creates the input txt file, the executable is called. This processes the input file and outputs the PDF plots. Next, a batch file for emailing the PDF manifest to recipients is triggered.
+      </p>
+      <img src="Allfiles.png" alt="File list screenshot">
+    </section>
+
+    <section>
+      <h3>Example PDF</h3>
+      <embed src="HD4 TLO Manifest - DD612 - 25-08-25.pdf" type="application/pdf" class="pdf-preview">
+      <p>
+      </p>
+    </section>
+    
+    <div class="footer">© Josh Kirkham Portfolio</div>
+  </div>
 </body>
 </html>
