--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       <p>
         Leverage existing scripting in PlantSCADA and integrate a Python script to auto-generate a PDF with plots of relevant train loading data. Have this emailed out to stakeholders after the completion of every train.
       </p>
+      <img src="ProcessFlow.png" alt="Process Flow">
     </section>
 
     <section>
@@ -102,7 +103,7 @@
 
     <section>
       <h3>Example PDF</h3>
-      <embed src="HD4 TLO Manifest - DD612 - 25-08-25.pdf" type="application/pdf" class="pdf-preview">
+      <img src="HD4 TLO Manifest - DD612 - 25-08-25.png" alt="File list screenshot">
       <p>
       </p>
     </section>
