--- a/index.html
+++ b/index.html
@@ -96,13 +96,16 @@
     <section>
       <h3>Files Needed for Processing and Emailing</h3>
       <p>
-        Python script packages as an executable is called. This processes the latest txt file and outputs the PDF plots. Next, a batch file for emailing the PDF manifest to recipients is triggered.
+        Python script packaged as an executable is called. This processes the latest txt file and outputs the PDF plots. Next, a batch file for emailing the PDF manifest to recipients is triggered.
       </p>
       <img src="Allfiles.png" alt="File list screenshot">
     </section>
 
     <section>
       <h3>Example PDF</h3>
+      <p>
+        Performance Summary with Time/Weight Metrics followed by 7 loading plots. 
+      </p>
       <img src="HD4 TLO Manifest - DD612 - 25-08-25.png" alt="File list screenshot">
       <p>
       </p>
