--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <section>
       <h2>Problem</h2>
       <p>
-        During train loading data from every wagon is already collected. At present there is limited oversight to this data and it is never visualised. This causes loading inefficiencies to occur. 
+        At present there is limited oversight to train loading. Data is currently collected for every wagon loaded but it is rarely used and never visualised. This causes loading inefficiencies to occur. 
       </p>
     </section>
 
@@ -81,6 +81,9 @@
       <h2>Solution</h2>
       <p>
         Create a python script to interpret the manifest for train loading and auto-generate a PDF with plots of relevant train loading data. Have this emailed out to stakeholders after the completion of every train.
+      </p>
+      <p>
+        The project transforms previously underutilised train loading data into clear, visual reports. By automating the generation and distribution of PDF plots, stakeholders gain timely insights that improve oversight and efficiency. This streamlined process not only enhances transparency but also helps identify and address operational bottlenecks.
       </p>
       <img src="ProcessFlow.png" alt="Process Flow">
     </section>
@@ -110,8 +113,5 @@
       <p>
       </p>
     </section>
-    
-    <div class="footer">© Josh Kirkham Portfolio</div>
-  </div>
 </body>
 </html>
