--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         Create a python script to interpret the manifest for train loading and auto-generate a PDF with plots of relevant train loading data. Have this emailed out to stakeholders after the completion of every train.
       </p>
       <p>
-        The project transforms previously underutilised train loading data into clear, visual reports. By automating the generation and distribution of PDF plots, stakeholders gain timely insights that improve oversight and efficiency. This streamlined process not only enhances transparency but also helps identify and address operational bottlenecks.
+        This project transforms previously underutilized train loading data into clear, visual reports that are automatically generated and distributed to stakeholders. By providing timely insights, it enhances oversight and transparency, helping teams identify and address operational bottlenecks. The visualizations make it easy to spot abnormal loading scenarios and detect excessive manual operations. They also help pinpoint incorrect manual slider settings and facilitate bench identification during overload events
       </p>
       <img src="ProcessFlow.png" alt="Process Flow">
     </section>
