--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         Create a python script to interpret the manifest for train loading and auto-generate a PDF with plots of relevant train loading data. Have this emailed out to stakeholders after the completion of every train.
       </p>
       <p>
-        This project transforms previously underutilized train loading data into clear, visual reports that are automatically generated and distributed to stakeholders. By providing timely insights, it enhances oversight and transparency, helping teams identify and address operational bottlenecks. The visualizations make it easy to spot abnormal loading scenarios and detect excessive manual operations. They also help pinpoint incorrect manual slider settings and facilitate bench identification during overload events
+        By providing timely insights, the generated performace plots enhance oversight and transparency, helping teams identify and address operational issues. The visualisations make it easy to spot abnormal loading scenarios and detect excessive manual operations. They also help pinpoint incorrect manual slider settings and facilitate bench identification during overload events
       </p>
       <img src="ProcessFlow.png" alt="Process Flow">
     </section>
@@ -107,7 +107,7 @@
     <section>
       <h3>Example PDF</h3>
       <p>
-        Performance Summary with Time/Weight Metrics followed by 7 loading plots. 
+        Performance summary with time/weight metrics followed by 7 loading plots. 
       </p>
       <img src="HD4 TLO Manifest - DD612 - 25-08-25.png" alt="File list screenshot">
       <p>
