--- a/index.html
+++ b/index.html
@@ -73,17 +73,20 @@
     <section>
       <h2>Problem</h2>
       <p>
-        At present there is limited oversight to train loading. Data is currently collected for every wagon loaded but it is rarely used and never visualised. This causes loading inefficiencies to occur. 
+        At present there is limited oversight to train loading. Data is currently collected for every wagon loaded but it is rarely used and never visualised. This causes loading inefficiencies to occur.
       </p>
     </section>
 
     <section>
       <h2>Solution</h2>
       <p>
-        Create a python script to interpret the manifest for train loading and auto-generate a PDF with plots of relevant train loading data. Have this emailed out to stakeholders after the completion of every train.
+        Create a python script to interpret the manifest collected from SCADA and generate a PDF with plots of relevant train loading data.
       </p>
       <p>
-        By providing timely insights, the generated performace plots enhance oversight and transparency, helping teams identify and address operational issues. The visualisations make it easy to spot abnormal loading scenarios and detect excessive manual operations. They also help pinpoint incorrect manual slider settings and facilitate bench identification during overload events
+        Have the pdf automatically emailed out to stakeholders after the completion of every train. 
+      </p>
+      <p>
+        The PDF enhances oversight and helps the team identify and address operational issues. The visualisations make it easy to identify abnormal loading scenarios and detect excessive manual operations.
       </p>
       <img src="ProcessFlow.png" alt="Process Flow">
     </section>
@@ -107,7 +110,7 @@
     <section>
       <h3>Example PDF</h3>
       <p>
-        Performance summary with time/weight metrics followed by 7 loading plots. 
+        Performance summary with time/weight target metrics followed by 7 loading plots.
       </p>
       <img src="HD4 TLO Manifest - DD612 - 25-08-25.png" alt="File list screenshot">
       <p>
