--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <section>
       <h2>Problem</h2>
       <p>
-        At present there is limited oversight to train loading. Data is currently collected for every wagon loaded but it is rarely used and never visualised. This causes loading inefficiencies to occur.
+        At present there is limited oversight to train loading. Data is currently collected for every wagon loaded but it is rarely used and never visualised. This causes loading inefficiencies to occur and not be recified. 
       </p>
     </section>
 
@@ -102,7 +102,7 @@
     <section>
       <h3>Files Needed for Processing and Emailing</h3>
       <p>
-        At the end of the cicode function a python script packaged as an executable is called. This processes the latest txt file and outputs the PDF plots. Next, a batch file for emailing the PDF manifest to recipients is triggered.
+        At the end of the cicode function a python script packaged as an executable is called. This processes the latest txt file and outputs the PDF plots.
       </p>
       <p>
         Next, a batch file for emailing the PDF manifest is triggered which calles blat.exe, a SMTP mailer. 
@@ -119,7 +119,7 @@
         Performance summary with time/weight target metrics followed by 7 loading plots.
       </p>
       <p>
-        Heavy use of multi-axis plots to correlate dependant loading variables to inform decision making during abnormal situations
+        Heavy use of multi-axis/variable plots to correlate dependant loading variables to inform decision making during abnormal situations.
       </p>
       <img src="HD4 TLO Manifest - DD612 - 25-08-25.png" alt="File list screenshot">
       <p>
