--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <section>
       <h2>Problem</h2>
       <p>
-        At present there is limited oversight to train loading. Data is currently collected for every wagon loaded but it is rarely used and never visualised. This causes loading inefficiencies to occur and not be recified. 
+        At present there is limited oversight to train loading. Data is currently collected for every wagon loaded but it is rarely used and never visualised. This causes loading inefficiencies to occur and not be rectified. 
       </p>
     </section>
 
