--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         At the end of the cicode function a python script packaged as an executable is called. This processes the latest txt file and outputs the PDF plots.
       </p>
       <p>
-        Next, a batch file for emailing the PDF manifest is triggered which calles blat.exe, a SMTP mailer. 
+        Next, a batch file for emailing the PDF manifest is triggered which calls blat.exe, a SMTP mailer. 
       </p>
       <p>
         All recipients of the pdf plot are listed in a txt file, this allows the recipient list to be updated easily. 
